--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "javascript-racingcar-precourse",
+  "name": "typescript-racingcar-precourse",
   "version": "1.0.0",
   "description": "우아한테크코스 프리코스 자동차 경주 게임 미션",
-  "dependencies": {},
   "devDependencies": {
-    "cypress": "8.7.0"
+    "@babel/core": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "babel-loader": "^8.2.5",
+    "cypress": "8.7.0",
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.2"
   },
   "scripts": {
-    "test": "cypress run --browser chrome"
+    "test": "cypress run --browser chrome",
+    "start": "webpack serve --config ./config/webpack.dev.js",
+    "build": "webpack --config ./config/webpack.prod.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/woowacourse/javascript-racingcar-precourse.git"
   },
   "keywords": [],
-  "author": "woowacourse",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/woowacourse/javascript-racingcar-precourse/issues"
   },
