--- a/package.json
+++ b/package.json
@@ -5,9 +5,15 @@
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
     "babel-loader": "^8.2.5",
     "cypress": "8.7.0",
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.7.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2"
