--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,8 @@
   },
   "extends": [
     "eslint:recommended",
+    "airbnb-base",
+    "airbnb-typescript/base",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended"
   ],
