--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "babel-loader": "^8.2.5",
     "cypress": "8.7.0",
     "eslint": "^8.18.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.1.0",
     "html-webpack-plugin": "^5.5.0",
